manifests/loki-stack/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: loki-stack
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    nginx.ingress.kubernetes.io/auth-url: https://pomerium-fwdauth.day2.tech/verify?uri=$scheme://$host$request_uri
    nginx.ingress.kubernetes.io/auth-signin: https://pomerium-fwdauth.day2.tech?uri=$scheme://$host$request_uri
spec:
  tls:
  - hosts:
    - grafana.day2.tech
    secretName: grafana-day2-tech-tls
  rules:
  - host: grafana.day2.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: loki-stack-grafana
          servicePort: 80
